Gap fix

--- a/src/css/_core.css
+++ b/src/css/_core.css
@@ -274,10 +274,10 @@ summary{
 .gapr1->*{margin-right: .5rem}
 .gapr10->*{margin-right: 5rem}
 
-nav[class*='gap'] > :last-child { margin-right: initial }
-
-[class*='gap'] > :first-child { margin-left: 0 }
-[class*='gap'] > :last-child { margin-right: 0 }
+[class*='gap'] > :first-child {margin-left: 0}
+[class*='gap'] > :last-child {margin-right: 0}
+nav[class*='gap'] > :first-child{margin-left: 1rem}
+nav[class*='gap'] > :last-child {margin-right: initial}
 
 .zi10{ z-index: 10}
 .zi50{ z-index: 50}
